fix(sidebar): fix horizontal overflow

--- a/src/sidebar/sidebar.scss
+++ b/src/sidebar/sidebar.scss
@@ -18,7 +18,7 @@
     padding-left: 1em;
     margin: 0;
 
-    overflow-y: hidden;
+    overflow: hidden;
   }
 
   & .custom-tip-content {
@@ -32,6 +32,7 @@
   flex-grow: 1;
   padding-right: .75em;
   overflow-y: scroll;
+  overflow-x: hidden;
 
   scrollbar-width: thin;
 
